--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,15 @@ rust:
   - nightly
 sudo: required
 
+services:
+  - docker
+
 before_install:
   - rustup toolchain add nightly || true
   - rustup self update
   - rustup component add rustfmt-preview --toolchain nightly
   - cargo +nightly fmt --version || true
+  - docker-compose up -d
 
 script:
   - cargo +nightly fmt --all -- --check
