--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ travis-ci = { repository = "jamwaffles/event-store-rs", branch = "master" }
 serde = "1.0.71"
 serde_derive = "1.0.71"
 serde_json = "1.0.26"
+postgres = { version = "0.15.2", features = [ "with-serde_json" ] }
