--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde_derive = "1.0.71"
 serde_json = "1.0.26"
 postgres = { version = "0.15.2", features = [ "with-serde_json" ] }
 fallible-iterator = "0.1.5"
+sha2 = "0.7.1"
