--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ travis-ci = { repository = "jamwaffles/event-store-rs", branch = "master" }
 serde = "1.0.71"
 serde_derive = "1.0.71"
 serde_json = "1.0.26"
-postgres = { version = "0.15.2", features = [ "with-serde_json", "with-uuid" ] }
+postgres = { version = "0.15.2", features = [ "with-serde_json", "with-uuid", "with-chrono" ] }
 fallible-iterator = "0.1.5"
 sha2 = "0.7.1"
 chrono = { version = "0.4.5", features = ["serde"] }
