--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde = "1.0.71"
 serde_derive = "1.0.71"
 serde_json = "1.0.26"
 postgres = { version = "0.15.2", features = [ "with-serde_json", "with-uuid", "with-chrono" ] }
+lapin-futures = "^0.13"
 fallible-iterator = "0.1.5"
 sha2 = "0.7.1"
 chrono = { version = "0.4.5", features = ["serde"] }
