--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,10 @@ fallible-iterator = "0.1.5"
 sha2 = "0.7.1"
 chrono = { version = "0.4.5", features = ["serde"] }
 uuid = { version = "0.5.1", features = ["serde", "v4"] }
+
+[dev-dependencies]
+criterion = "0.2.4"
+
+[[bench]]
+name = "testhelpers"
+harness = false
