--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,13 @@ authors = ["James Waples <jamwaffles@gmail.com>"]
 travis-ci = { repository = "repositive/event-store-rs", branch = "master" }
 
 [dependencies]
+log = "0.4"
 serde = "1.0.71"
 serde_derive = "1.0.71"
 serde_json = "1.0.26"
 postgres = { version = "0.15.2", features = [ "with-serde_json", "with-uuid", "with-chrono" ] }
 lapin-futures = "^0.13"
-futures = "^0.1.23"
+futures = "0.1.23"
 tokio = "^0.1.8"
 fallible-iterator = "0.1.5"
 sha2 = "0.7.1"
