Move to Cargo workspace
Procedural macros must be the only export from a crate, so the solution
is to make a separate crate with _just_ the proc macro exported.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ before_install:
 
 script:
   - cargo +nightly fmt --all -- --check
-  - cargo build --release
-  - cargo test --release
+  - cargo build --all --release
+  - cargo test --all --release
 
 cache: cargo
 before_cache:
