--- a/event-store-derive/Cargo.toml
+++ b/event-store-derive/Cargo.toml
@@ -7,6 +7,11 @@ authors = ["James Waples <jamwaffles@gmail.com>"]
 syn = { version = "0.14.9", features = [ "extra-traits" ] }
 quote = "0.6.8"
 proc-macro2 = "0.4.15"
+serde = "1.0.75"
+serde_derive = "1.0.75"
+event-store-derive-internals = { path = "../event-store-derive-internals" }
+serde_json = "1.0.26"
 
 [lib]
 proc-macro = true
+
