--- a/event-store/Cargo.toml
+++ b/event-store/Cargo.toml
@@ -15,6 +15,8 @@ fallible-iterator = "0.1.5"
 sha2 = "0.7.1"
 chrono = { version = "0.4.5", features = ["serde"] }
 uuid = { version = "0.5.1", features = ["serde", "v4"] }
+event-store-derive = { path = "../event-store-derive" }
+event-store-derive-internals = { path = "../event-store-derive-internals" }
 
 [dev-dependencies]
 criterion = "0.2.4"
