--- a/event-store/Cargo.toml
+++ b/event-store/Cargo.toml
@@ -18,6 +18,7 @@ uuid = { version = "0.5.1", features = ["serde", "v4"] }
 event-store-derive = { path = "../event-store-derive" }
 event-store-derive-internals = { path = "../event-store-derive-internals" }
 log = "0.4"
+env_logger = "0.5.13"
 lapin-futures = "0.13"
 futures = "0.1.23"
 tokio = "0.1.8"
