--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ services:
   - docker
 
 before_install:
+  - docker-compose up -d rabbit
   - docker-compose up -d postgres
   - rustup toolchain add nightly || true
   - rustup self update
