--- a/event-store/Cargo.toml
+++ b/event-store/Cargo.toml
@@ -10,7 +10,6 @@ travis-ci = { repository = "repositive/event-store-rs", branch = "master" }
 serde = "1.0.71"
 serde_derive = "1.0.71"
 serde_json = "1.0.26"
-postgres = { version = "0.15.2", features = [ "with-serde_json", "with-uuid", "with-chrono" ] }
 fallible-iterator = "0.1.5"
 sha2 = "0.7.1"
 chrono = { version = "0.4.5", features = ["serde"] }
@@ -21,11 +20,16 @@ log = "0.4"
 lapin-futures = "0.13"
 futures = "0.1.23"
 tokio = "0.1.8"
+r2d2 = "0.8.2"
+
+# TODO: Install from crates.io when https://github.com/sfackler/r2d2-postgres/pull/11 is merged
+[dependencies.r2d2_postgres]
+git = "https://github.com/repositive/r2d2-postgres.git"
+branch = "features-reexport"
+features = [ "with-serde_json", "with-uuid", "with-chrono" ]
 
 [dev-dependencies]
 criterion = "0.2.4"
-r2d2_postgres = "0.14.0"
-r2d2 = "0.8.2"
 env_logger = "0.5.13"
 
 [[bench]]
