--- a/event-store/Cargo.toml
+++ b/event-store/Cargo.toml
@@ -21,12 +21,8 @@ lapin-futures = "0.13"
 futures = "0.1.23"
 tokio = "0.1.8"
 r2d2 = "0.8.2"
-
-# TODO: Install from crates.io when https://github.com/sfackler/r2d2-postgres/pull/11 is merged
-[dependencies.r2d2_postgres]
-git = "https://github.com/repositive/r2d2-postgres.git"
-branch = "features-reexport"
-features = [ "with-serde_json", "with-uuid", "with-chrono" ]
+postgres = { version = "0.15.2", features = [ "with-serde_json", "with-uuid", "with-chrono" ] }
+r2d2_postgres = "0.14.0"
 
 [dev-dependencies]
 criterion = "0.2.4"
