--- a/event-store/Cargo.toml
+++ b/event-store/Cargo.toml
@@ -23,6 +23,7 @@ tokio = "0.1.8"
 postgres = { version = "0.15.2", features = [ "with-serde_json", "with-uuid", "with-chrono" ] }
 bb8 = { git = "https://github.com/khuey/bb8.git" }
 bb8-postgres = { git = "https://github.com/khuey/bb8.git" }
+tokio-postgres = "0.3.0"
 
 [dev-dependencies]
 criterion = "0.2.4"
