--- a/event-store/Cargo.toml
+++ b/event-store/Cargo.toml
@@ -13,17 +13,16 @@ serde_json = "1.0.26"
 fallible-iterator = "0.1.5"
 sha2 = "0.7.1"
 chrono = { version = "0.4.5", features = ["serde"] }
-uuid = { version = "0.5.1", features = ["serde", "v4"] }
+uuid = { version = "0.6.0", features = ["serde", "v4"] }
 event-store-derive = { path = "../event-store-derive" }
 event-store-derive-internals = { path = "../event-store-derive-internals" }
 log = "0.4"
 lapin-futures = "0.13"
 futures = "0.1.23"
+# tokio-postgres = { git = "https://github.com/sfackler/rust-postgres", rev = "5ad78500095c0a9a59533b9164f46edd23cb9e1b", features = ["with-serde_json", "with-chronos", "with-uuid"]}
 tokio = "0.1.8"
-tokio-postgres = { version = "0.3.0", features = ["with-serde_json", "with-uuid"]}
-# bb8 = { git = "https://github.com/khuey/bb8.git" }
-# bb8-postgres = { git = "https://github.com/khuey/bb8.git" }
-
+bb8 = { git = "https://github.com/khuey/bb8.git" }
+bb8-postgres = {git = "https://github.com/khuey/bb8.git", features = ["with-chrono-0.4", "with-uuid-0.6", "with-serde_json-1"]}
 [dev-dependencies]
 criterion = "0.2.4"
 env_logger = "0.5.13"
