--- a/event-store/Cargo.toml
+++ b/event-store/Cargo.toml
@@ -23,6 +23,8 @@ futures = "0.1.23"
 tokio = "0.1.8"
 bb8 = { git = "https://github.com/khuey/bb8.git" }
 bb8-postgres = {git = "https://github.com/khuey/bb8.git", features = ["with-chrono-0.4", "with-uuid-0.6", "with-serde_json-1"]}
+futures-state-stream = "0.2"
+
 [dev-dependencies]
 criterion = "0.2.4"
 env_logger = "0.5.13"
