Check that benchmarks build in CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ script:
   - cargo +nightly fmt --all -- --check
   - cargo build --all --release
   - cargo test --all --release
+  - cargo bench --no-run
 
 cache: cargo
 before_cache:
