--- a/event-store/Cargo.toml
+++ b/event-store/Cargo.toml
@@ -4,5 +4,8 @@ edition = "2018"
 name = "event-store"
 version = "0.1.0"
 [dependencies]
+futures = "0.1.25"
+lapin-futures = "0.14.0"
 log = "0.4.6"
 pretty_env_logger = "0.2.5"
+tokio = "0.1.11"
