--- a/event-store/Cargo.toml
+++ b/event-store/Cargo.toml
@@ -4,8 +4,17 @@ edition = "2018"
 name = "event-store"
 version = "0.1.0"
 [dependencies]
+chrono = "0.4.6"
+fallible-iterator = "0.1.5"
 futures = "0.1.25"
 lapin-futures = "0.14.0"
 log = "0.4.6"
+postgres = { version = "0.15.2", features = [ "with-serde_json", "with-uuid", "with-chrono" ] }
 pretty_env_logger = "0.2.5"
+r2d2 = "0.8.3"
+r2d2_postgres = "0.14.0"
+serde = "1.0.80"
+serde_json = "1.0.33"
+sha2 = "0.8.0"
 tokio = "0.1.11"
+uuid = "0.7.1"
