--- a/event-store/Cargo.toml
+++ b/event-store/Cargo.toml
@@ -8,12 +8,11 @@ fallible-iterator = "0.1.5"
 futures = "0.1.25"
 lapin-futures = "0.14.0"
 log = "0.4.6"
-pretty_env_logger = "0.2.5"
-r2d2 = "0.8.3"
+r2d2 = "0.8.2"
 r2d2_postgres = "0.14.0"
 serde = "1.0.80"
 serde_derive = "1.0.80"
-serde_json = "1.0.33"
+serde_json = "1.0.32"
 sha2 = "0.8.0"
 tokio = "0.1.11"
 
@@ -33,4 +32,7 @@ version = "0.15.2"
 
 [dependencies.uuid]
 features = ["serde", "v4"]
-version = "0.7.1"
+version = "0.5.1"
+
+[dev-dependencies]
+pretty_env_logger = "0.2.5"
