--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,20 @@ services:
       - "5673:5672"
       - "15673:15672"
 
+  redis:
+    image: redis:5-alpine
+    ports:
+      - "6378:6379"
+
+  redis_admin:
+    image: rediscommander/redis-commander:latest
+    restart: always
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    ports:
+      - "8081:8081"
+    links:
+      - redis
 
   integration_setup:
     image: postgres:10.5-alpine
