Benchmark PG store with Redis cache
30 msec for PG/PG,
18 msec for PG/Redis

--- a/event-store/Cargo.toml
+++ b/event-store/Cargo.toml
@@ -8,7 +8,7 @@ name = "testhelpers"
 
 [[bench]]
 harness = false
-name = "pg"
+name = "exercise"
 [badges.travis-ci]
 branch = "master"
 repository = "repositive/event-store-rs"
