--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,7 @@ services:
   - docker
 
 before_install:
-  - docker-compose up -d rabbit
-  - docker-compose up -d postgres
-  - docker-compose up -d redis
+  - docker-compose up -d rabbit postgres redis
   - rustup toolchain add nightly || true
   - rustup self update
   - rustup component add rustfmt-preview --toolchain nightly
