--- a/event-store/Cargo.toml
+++ b/event-store/Cargo.toml
@@ -21,6 +21,7 @@ serde_derive = "1.0.80"
 serde_json = "1.0.32"
 sha2 = "0.8.0"
 tokio = "0.1.11"
+tokio-core = "0.1.17"
 
 [dependencies.chrono]
 features = ["serde"]
@@ -43,3 +44,4 @@ version = "0.5.1"
 [dev-dependencies]
 criterion = "0.2.5"
 env_logger = "0.5.13"
+pretty_env_logger = "0.2.5"
