Disable PG volume mapping

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 version: '3'
 services:
   postgres:
-    image: postgres:10.5-alpine
+    image: postgres:11-alpine
     ports:
       - "5430:5432"
-    volumes:
-      - "./postgres_data:/var/lib/postgresql/data"
+    # Uncomment to persist PG data
+    # volumes:
+    #   - "./postgres_data:/var/lib/postgresql/data"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_DB: eventstorerust
@@ -32,7 +33,7 @@ services:
       - redis
 
   integration_setup:
-    image: postgres:10.5-alpine
+    image: postgres:11-alpine
     command: psql -h postgres -U postgres -d eventstorerust -f /opt/integration-tests.sql
     volumes:
       - ".:/opt"
