Stop using nightly rustfmt in CI
Also doesn't bother doing a cargo build --release as cargo test
--release does a prod build anyway.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,15 +19,11 @@ before_install:
   - docker-compose up -d rabbit
   - docker-compose up -d postgres
   - docker-compose up -d redis
-  - rustup toolchain add nightly || true
-  - rustup self update
-  - rustup component add rustfmt-preview --toolchain nightly
+  - rustup component add rustfmt
   - docker-compose run integration_setup
-  - cargo +nightly fmt --version || true
 
 script:
-  - cargo +nightly fmt --all -- --check
-  - cargo build --all --release
+  - cargo fmt --all -- --check
   - cargo test --all --release
   - cargo bench --no-run
 
