--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
-dist: trusty
+dist: xenial
 language: rust
 rust:
   - stable
   - beta
-  - nightly-2018-12-24
+  - nightly-2019-01-06
 sudo: required
 
 matrix:
