--- a/event-store-derive-internals/Cargo.toml
+++ b/event-store-derive-internals/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "event-store-derive-internals"
 version = "0.1.0"
-authors = ["James Waples <jamwaffles@gmail.com>"]
+authors = ["James Waples <james@wapl.es>"]
+edition = "2018"
 
 [dependencies]
 serde = "1.0.84"
