--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ rust:
   - nightly-2019-01-06
 sudo: required
 
+addons:
+  apt:
+    packages:
+      libgtk-3-dev
+
 matrix:
   fast_finish: true
   allow_failures:
