--- a/explorer/Cargo.toml
+++ b/explorer/Cargo.toml
@@ -14,6 +14,15 @@ event-store-derive-internals = { path = "../event-store-derive-internals" }
 tokio = { version = "0.1.14", features = ["async-await-preview"] }
 tokio-async-await = "0.1.5"
 pretty_env_logger = "0.3.0"
+serde_json = "1.0.35"
+chrono = { version = "0.4", features = ["serde"] }
+serde_derive = "1.0.84"
+serde = "1.0.84"
+log = "0.4.6"
+
+[dependencies.uuid]
+features = ["serde", "v4"]
+version = "0.5.1"
 
 [dependencies.gtk]
 version = "0.5.0"
