--- a/explorer/Cargo.toml
+++ b/explorer/Cargo.toml
@@ -19,6 +19,7 @@ chrono = { version = "0.4", features = ["serde"] }
 serde_derive = "1.0.84"
 serde = "1.0.84"
 log = "0.4.6"
+structopt = "0.2.14"
 
 [dependencies.uuid]
 features = ["serde", "v4"]
