--- a/explorer/Cargo.toml
+++ b/explorer/Cargo.toml
@@ -20,6 +20,7 @@ serde_derive = "1.0.84"
 serde = "1.0.84"
 log = "0.4.6"
 structopt = "0.2.14"
+gdk = "0.9.0"
 
 [dependencies.uuid]
 features = ["serde", "v4"]
