--- a/event-store/Cargo.toml
+++ b/event-store/Cargo.toml
@@ -22,6 +22,7 @@ serde_json = "1.0.38"
 sha2 = "0.8.0"
 tokio = { version = "0.1.15", features = ["async-await-preview"] }
 tokio-async-await = "0.1.6"
+url = "1.7.2"
 # tokio-core = "0.1.17"
 
 [dependencies.chrono]
