Migrate unifier from event-store repository

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ members = [
 	"event-store",
 	"event-store-derive",
 	"event-store-derive-internals",
-    "explorer"
+    "explorer",
+    "unifier"
 ]
