--- a/unifier/Cargo.toml
+++ b/unifier/Cargo.toml
@@ -12,6 +12,7 @@ structopt = "0.2.15"
 serde_json = "1.0.39"
 log = "0.4.6"
 pretty_env_logger = "0.3.0"
+pbr = "1.0.1"
 
 [dependencies.postgres]
 version = "0.16.0-rc.1"
