--- a/event-store/Cargo.toml
+++ b/event-store/Cargo.toml
@@ -35,8 +35,8 @@ path = "../event-store-derive"
 path = "../event-store-derive-internals"
 
 [dependencies.postgres]
-features = ["with-serde_json", "with-uuid", "with-chrono"]
-version = "0.15.2"
+version = "0.16.0-rc.1"
+features = ["with-serde_json-1", "with-uuid-0_7", "with-chrono-0_4"]
 
 [dependencies.uuid]
 features = ["serde", "v4"]
