--- a/event-store/Cargo.toml
+++ b/event-store/Cargo.toml
@@ -14,7 +14,7 @@ futures = "0.1.27"
 lapin-futures = "0.18.0"
 log = "0.4.6"
 r2d2 = "0.8.4"
-r2d2_postgres = "0.14.0"
+r2d2_postgres = "0.15.0-rc.1"
 redis = "0.10.0"
 serde = "1.0.91"
 serde_derive = "1.0.91"
