--- a/event-store/Cargo.toml
+++ b/event-store/Cargo.toml
@@ -46,3 +46,7 @@ version = "0.5.1"
 criterion = "0.2.11"
 env_logger = "0.6.1"
 pretty_env_logger = "0.3.0"
+
+[[bench]]
+name = "serialize"
+harness = false
